--- a/index.html
+++ b/index.html
@@ -14,41 +14,64 @@
   <body>
     <header class="page-header">
       <div class="page-header__header">
-        <nav class="page-header__navigation">
-          <a href="index.html" class="logo"
-            >Web<span class="logo__highlight">Studio</span></a
-          >
-
-          <ul class="site-nav">
-            <li class="site-nav__menu-item">
-              <a href="index.html" class="site-nav__anchor--active">Студия</a>
+        <a href="index.html" class="logo"
+          >Web<span class="logo__highlight">Studio</span></a
+        >
+        <nav class="navigation">
+          <ul class="navigation__site-nav">
+            <li class="navigation__menu-item">
+              <a
+                href="index.html"
+                class="
+                  navigation__site-nav-anchor
+                  navigation__site-nav-anchor--active
+                "
+                >Студия</a
+              >
             </li>
-            <li class="site-nav__menu-item">
-              <a href="portfolio.html" class="site-nav__anchor">Портфолио</a>
+            <li class="navigation__menu-item">
+              <a href="portfolio.html" class="navigation__site-nav-anchor"
+                >Портфолио</a
+              >
             </li>
-            <li class="site-nav__menu-item">
-              <a href="" class="site-nav__anchor">Контакты</a>
+            <li class="navigation__menu-item">
+              <a href="" class="navigation__site-nav-anchor">Контакты</a>
+            </li>
+          </ul>
+          <ul class="navigation__auth-nav">
+            <li class="navigation__auth-nav-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="navigation__auth-nav-anchor"
+              >
+                <svg
+                  class="
+                    navigation__button-icon navigation__button-icon--horizontal
+                  "
+                  width="14"
+                  height="10"
+                >
+                  <use href="./images/icons.svg#icon-envelope" />
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="navigation__auth-nav-item">
+              <a href="tel:+380961111111" class="navigation__auth-nav-anchor">
+                <svg
+                  class="
+                    navigation__button-icon navigation__button-icon--vertical
+                  "
+                  width="10"
+                  height="14"
+                >
+                  <use href="./images/icons.svg#icon-smartphone" />
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </nav>
-        <ul class="auth-nav">
-          <li class="auth-nav__menu-item">
-            <a href="mailto:info@devstudio.com" class="auth-nav__anchor">
-              <svg class="auth-nav__button-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope" />
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="auth-nav__menu-item">
-            <a href="tel:+380961111111" class="auth-nav__anchor">
-              <svg class="auth-nav__button-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone" />
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
 
