--- a/portfolio.html
+++ b/portfolio.html
@@ -10,47 +10,122 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header js-menu-container">
       <div class="page-header__header">
-        <nav class="page-header__navigation">
-          <a href="index.html" class="logo"
-            >Web<span class="logo__highlight">Studio</span></a
-          >
-
-          <ul class="site-nav">
-            <li class="site-nav__menu-item">
-              <a href="index.html" class="site-nav__anchor">Студия</a>
+        <a href="index.html" class="logo"
+          >Web<span class="logo__highlight">Studio</span></a
+        >
+        <nav class="navigation">
+          <ul class="navigation__site-nav">
+            <li class="navigation__menu-item">
+              <a href="index.html" class="navigation__site-nav-anchor"
+                >Студия</a
+              >
             </li>
-            <li class="site-nav__menu-item">
-              <a href="portfolio.html" class="site-nav__anchor--active"
+            <li class="navigation__menu-item">
+              <a
+                href="portfolio.html"
+                class="
+                  navigation__site-nav-anchor
+                  navigation__site-nav-anchor--active
+                "
                 >Портфолио</a
               >
             </li>
-            <li class="site-nav__menu-item">
-              <a href="" class="site-nav__anchor">Контакты</a>
+            <li class="navigation__menu-item">
+              <a href="" class="navigation__site-nav-anchor">Контакты</a>
             </li>
           </ul>
+          <div>
+            <ul class="navigation__auth-nav">
+              <li class="navigation__auth-nav-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="navigation__auth-nav-anchor"
+                >
+                  <svg
+                    class="
+                      navigation__button-icon
+                      navigation__button-icon--horizontal
+                    "
+                    width="14"
+                    height="10"
+                  >
+                    <use href="./images/icons.svg#icon-envelope" />
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="navigation__auth-nav-item">
+                <a
+                  href="tel:+380961111111"
+                  class="
+                    navigation__auth-nav-anchor
+                    navigation__auth-nav-anchor--phone
+                  "
+                >
+                  <svg
+                    class="
+                      navigation__button-icon navigation__button-icon--vertical
+                    "
+                    width="10"
+                    height="14"
+                  >
+                    <use href="./images/icons.svg#icon-smartphone" />
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+            <ul class="navigation__social-networks-list">
+              <li class="navigation__social-networks-list-item">
+                <a href="" class="navigation__social-networks-list-anchor"
+                  >Instagram</a
+                >
+              </li>
+              <li class="navigation__social-networks-list-item">
+                <a href="" class="navigation__social-networks-list-anchor"
+                  >Twitter</a
+                >
+              </li>
+              <li class="navigation__social-networks-list-item">
+                <a href="" class="navigation__social-networks-list-anchor"
+                  >Facebook</a
+                >
+              </li>
+              <li class="navigation__social-networks-list-item">
+                <a href="" class="navigation__social-networks-list-anchor"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
         </nav>
-        <ul class="auth-nav">
-          <li class="auth-nav__menu-item">
-            <a href="mailto:info@devstudio.com" class="auth-nav__anchor">
-              <svg class="auth-nav__button-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope" />
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="auth-nav__menu-item">
-            <a href="tel:+380961111111" class="auth-nav__anchor">
-              <svg class="auth-nav__button-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone" />
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <button type="button" class="page-header__menu-button">
+          <svg
+            width="40"
+            height="40"
+            class="page-header__menu-button-image js-open-menu"
+          >
+            <use href="./images/icons.svg#icon-burger-menu"></use>
+          </svg>
+          <svg
+            width="40"
+            height="40"
+            class="page-header__menu-button-image js-close-menu"
+          >
+            <use href="./images/icons.svg#icon-close-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
