Refactor Our team styles

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
           <ul class="our-team__list">
             <li class="our-team-card">
               <img
+                class="our-team-card__image"
                 src="./images/igor-demianenko-photo.jpg"
                 alt="Дизайнер продукта"
                 width="270"
@@ -286,6 +287,7 @@
             </li>
             <li class="our-team-card">
               <img
+                class="our-team-card__image"
                 src="./images/olga-repina-photo.jpg"
                 alt="Разработчик"
                 width="270"
@@ -327,6 +329,7 @@
             </li>
             <li class="our-team-card">
               <img
+                class="our-team-card__image"
                 src="./images/nikolai-tarasov-photo.jpg"
                 alt="Специалист по маркетингу"
                 width="270"
@@ -368,6 +371,7 @@
             </li>
             <li class="our-team-card">
               <img
+                class="our-team-card__image"
                 src="./images/mikhail-ermakov-photo.jpg"
                 alt="UI дизайнер"
                 width="270"
