--- a/index.html
+++ b/index.html
@@ -469,61 +469,65 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <div>
-          <p class="logo logo--footer">
-            Web<span class="logo__highlight--white">Studio</span>
-          </p>
-          <address class="footer__address">
-            <ul class="contacts">
-              <li class="contacts__item">г. Киев, пр-т Леси Украинки, 26</li>
-              <li class="contacts__item">
-                <a href="mailto:info@devstudio.com" class="contacts__anchor"
-                  >info@devstudio.com</a
-                >
+        <div class="footer__wrapper">
+          <div class="footer__logo-address">
+            <p class="logo logo--footer">
+              Web<span class="logo__highlight--white">Studio</span>
+            </p>
+            <address class="footer__address">
+              <ul class="contacts">
+                <li class="contacts__item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="contacts__item">
+                  <a href="mailto:info@devstudio.com" class="contacts__anchor"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="contacts__item">
+                  <a href="tel:+380961111111" class="contacts__anchor"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__social-media">
+            <h3 class="footer__caption">Присоединяйтесь</h3>
+            <ul class="footer__social-media-icons">
+              <li class="social-media-item">
+                <a href="#" class="social-media-item__icon">
+                  <svg class="social-media-item__logo" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram" />
+                  </svg>
+                </a>
               </li>
-              <li class="contacts__item">
-                <a href="tel:+380961111111" class="contacts__anchor"
-                  >+38 096 111 11 11</a
-                >
+              <li class="social-media-item">
+                <a href="#" class="social-media-item__icon">
+                  <svg class="social-media-item__logo" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter" />
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a href="#" class="social-media-item__icon">
+                  <svg class="social-media-item__logo" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook" />
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a href="#" class="social-media-item__icon">
+                  <svg class="social-media-item__logo" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin" />
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__social-media">
-          <h3 class="footer__caption">Присоединяйтесь</h3>
-          <ul class="footer__social-media-icons">
-            <li class="social-media-item">
-              <a href="#" class="social-media-item__icon">
-                <svg class="social-media-item__logo" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram" />
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="#" class="social-media-item__icon">
-                <svg class="social-media-item__logo" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter" />
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="#" class="social-media-item__icon">
-                <svg class="social-media-item__logo" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook" />
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="#" class="social-media-item__icon">
-                <svg class="social-media-item__logo" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin" />
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer__subscription">
-          <h3 class="footer__caption">Подпишитесь на рассылку</h3>
+          <h3 class="footer__caption footer__caption--centered">
+            Подпишитесь на рассылку
+          </h3>
           <form action="#" class="subscription-form">
             <input
               type="email"
