Refactor portfolio styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -171,6 +171,7 @@
                   <img
                     src="./images/technokryak.jpg"
                     alt="Сайт Технокряк"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -191,6 +192,7 @@
                   <img
                     src="./images/poster.jpg"
                     alt="Постер баскетбольного матча"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -213,6 +215,7 @@
                   <img
                     src="./images/seafood.jpg"
                     alt="Ресторан Seafood"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -233,6 +236,7 @@
                   <img
                     src="./images/prime.jpg"
                     alt="Проект Prime"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -253,6 +257,7 @@
                   <img
                     src="./images/boxes.jpg"
                     alt="Проект Boxes"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -273,6 +278,7 @@
                   <img
                     src="./images/inspiration.jpg"
                     alt="Веб-сайт Inspiration"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -295,6 +301,7 @@
                   <img
                     src="./images/ltd-edition.jpg"
                     alt="Издание Limited Edition"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
@@ -314,11 +321,16 @@
             <li class="project-thumbnails__item">
               <a href="" class="thumbnail-link">
                 <div class="thumbnail-link__wrapper">
-                  <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
+                  <img
+                    src="./images/lab.jpg"
+                    alt="Проект LAB"
+                    class="thumbnail-link__image"
+                    width="370"
+                  />
                   <p class="thumbnail-link__overlay">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
+                    class="thumbnail-link__image" do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua.
                   </p>
                 </div>
                 <div class="thumbnail-link__project-caption">
@@ -333,6 +345,7 @@
                   <img
                     src="./images/growing-business.jpg"
                     alt="Приложение Growing Business"
+                    class="thumbnail-link__image"
                     width="370"
                   />
                   <p class="thumbnail-link__overlay">
