Refactor images to match device resolutions

--- a/index.html
+++ b/index.html
@@ -206,31 +206,82 @@
           <ul class="our-expertise__list">
             <li class="our-expertise-item">
               <div class="our-expertise-item__img-wrapper">
-                <img
-                  src="./images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
-                  alt="Программирование"
-                  width="370"
-                />
+                <picture class="picture">
+                  <source
+                    srcset="
+                      ./images/desktop/close-up-image-programer-working-his-desk-office_1098-18707.webp    1x,
+                      ./images/desktop/close-up-image-programer-working-his-desk-office_1098-18707@2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="
+                      ./images/desktop/close-up-image-programer-working-his-desk-office_1098-18707.jpg    1x,
+                      ./images/desktop/close-up-image-programer-working-his-desk-office_1098-18707@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <img
+                    src="./images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
+                    alt="Программирование"
+                    width="370"
+                  />
+                </picture>
                 <p class="our-expertise-item__overlay">Десктопные приложения</p>
               </div>
             </li>
             <li class="our-expertise-item">
               <div class="our-expertise-item__img-wrapper">
-                <img
-                  src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
-                  alt="UI дизайн"
-                  width="370"
-                />
+                <picture class="picture">
+                  <source
+                    srcset="
+                      ./images/desktop/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.webp    1x,
+                      ./images/desktop/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713@2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="
+                      ./images/desktop/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg    1x,
+                      ./images/desktop/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <img
+                    src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
+                    alt="UI дизайн"
+                    width="370"
+                  />
+                </picture>
                 <p class="our-expertise-item__overlay">Мобильные приложения</p>
               </div>
             </li>
             <li class="our-expertise-item">
               <div class="our-expertise-item__img-wrapper">
-                <img
-                  src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
-                  alt="Веб-дизайн"
-                  width="370"
-                />
+                <picture class="picture">
+                  <source
+                    srcset="
+                      ./images/desktop/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.webp    1x,
+                      ./images/desktop/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119@2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="
+                      ./images/desktop/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg    1x,
+                      ./images/desktop/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <img
+                    src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
+                    alt="Веб-дизайн"
+                    width="370"
+                  />
+                </picture>
                 <p class="our-expertise-item__overlay">Дизайнерские решения</p>
               </div>
             </li>
@@ -244,12 +295,59 @@
           <h2 class="our-team__secondary-header">Наша команда</h2>
           <ul class="our-team__list">
             <li class="our-team-card">
-              <img
-                class="our-team-card__image"
-                src="./images/igor-demianenko-photo.jpg"
-                alt="Дизайнер продукта"
-                width="270"
-              />
+              <picture class="picture">
+                <source
+                  srcset="
+                    ./images/desktop/igor-demianenko-photo.webp    1x,
+                    ./images/desktop/igor-demianenko-photo@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/desktop/igor-demianenko-photo.jpg    1x,
+                    ./images/desktop/igor-demianenko-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/igor-demianenko-photo.webp    1x,
+                    ./images/tablet/igor-demianenko-photo@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/igor-demianenko-photo.jpg    1x,
+                    ./images/tablet/igor-demianenko-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/igor-demianenko-photo.webp    1x,
+                    ./images/mobile/igor-demianenko-photo@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/igor-demianenko-photo.jpg    1x,
+                    ./images/mobile/igor-demianenko-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/igor-demianenko-photo.jpg"
+                  class="our-team-card__image"
+                  alt="Дизайнер продукта"
+                  width="270"
+                />
+              </picture>
               <div class="person-caption">
                 <h3 class="person-caption__name">Игорь Демьяненко</h3>
                 <p class="person-caption__position">Product Designer</p>
@@ -286,12 +384,59 @@
               </div>
             </li>
             <li class="our-team-card">
-              <img
-                class="our-team-card__image"
-                src="./images/olga-repina-photo.jpg"
-                alt="Разработчик"
-                width="270"
-              />
+              <picture class="picture">
+                <source
+                  srcset="
+                    ./images/desktop/olga-repina-photo.webp    1x,
+                    ./images/desktop/olga-repina-photo@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/desktop/olga-repina-photo.jpg    1x,
+                    ./images/desktop/olga-repina-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/olga-repina-photo.webp    1x,
+                    ./images/tablet/olga-repina-photo@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/olga-repina-photo.jpg    1x,
+                    ./images/tablet/olga-repina-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/olga-repina-photo.webp    1x,
+                    ./images/mobile/olga-repina-photo@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/olga-repina-photo.jpg    1x,
+                    ./images/mobile/olga-repina-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/olga-repina-photo.jpg"
+                  class="our-team-card__image"
+                  alt="Разработчик"
+                  width="270"
+                />
+              </picture>
               <div class="person-caption">
                 <h3 class="person-caption__name">Ольга Репина</h3>
                 <p class="person-caption__position">Frontend Developer</p>
@@ -328,12 +473,59 @@
               </div>
             </li>
             <li class="our-team-card">
-              <img
-                class="our-team-card__image"
-                src="./images/nikolai-tarasov-photo.jpg"
-                alt="Специалист по маркетингу"
-                width="270"
-              />
+              <picture class="picture">
+                <source
+                  srcset="
+                    ./images/desktop/nikolai-tarasov-photo.webp    1x,
+                    ./images/desktop/nikolai-tarasov-photo@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/desktop/nikolai-tarasov-photo.jpg    1x,
+                    ./images/desktop/nikolai-tarasov-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/nikolai-tarasov-photo.webp    1x,
+                    ./images/tablet/nikolai-tarasov-photo@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/nikolai-tarasov-photo.jpg    1x,
+                    ./images/tablet/nikolai-tarasov-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/nikolai-tarasov-photo.webp    1x,
+                    ./images/mobile/nikolai-tarasov-photo@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/nikolai-tarasov-photo.jpg    1x,
+                    ./images/mobile/nikolai-tarasov-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/nikolai-tarasov-photo.jpg"
+                  class="our-team-card__image"
+                  alt="Специалист по маркетингу"
+                  width="270"
+                />
+              </picture>
               <div class="person-caption">
                 <h3 class="person-caption__name">Николай Тарасов</h3>
                 <p class="person-caption__position">Marketing</p>
@@ -370,12 +562,59 @@
               </div>
             </li>
             <li class="our-team-card">
-              <img
-                class="our-team-card__image"
-                src="./images/mikhail-ermakov-photo.jpg"
-                alt="UI дизайнер"
-                width="270"
-              />
+              <picture class="picture">
+                <source
+                  srcset="
+                    ./images/desktop/mikhail-ermakov-photo.webp    1x,
+                    ./images/desktop/mikhail-ermakov-photo@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/desktop/mikhail-ermakov-photo.jpg    1x,
+                    ./images/desktop/mikhail-ermakov-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/mikhail-ermakov-photo.webp    1x,
+                    ./images/tablet/mikhail-ermakov-photo@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/mikhail-ermakov-photo.jpg    1x,
+                    ./images/tablet/mikhail-ermakov-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/mikhail-ermakov-photo.webp    1x,
+                    ./images/mobile/mikhail-ermakov-photo@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/mobile/mikhail-ermakov-photo.jpg    1x,
+                    ./images/mobile/mikhail-ermakov-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/mikhail-ermakov-photo.jpg"
+                  class="our-team-card__image"
+                  alt="UI дизайнер"
+                  width="270"
+                />
+              </picture>
               <div class="person-caption">
                 <h3 class="person-caption__name">Михаил Ермаков</h3>
                 <p class="person-caption__position">UI Designer</p>
