Fix modal button in the hero section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,11 @@
           <h1 class="hero__main-header">
             Эффективные решения для вашего бизнеса
           </h1>
-          <button type="button" class="modal-btn" data-modal-open>
+          <button
+            type="button"
+            class="modal-btn modal-btn--narrow"
+            data-modal-open
+          >
             Заказать услугу
           </button>
         </div>
